fix scrollbar
iHateMS

--- a/.configs/themes/newdocs/assets/_main.scss
+++ b/.configs/themes/newdocs/assets/_main.scss
@@ -20,6 +20,7 @@ body {
 //   transition: all 0.2s;
 // }
 
+
 h1,
 h2,
 h3,
@@ -32,9 +33,11 @@ a, a:link {
   text-decoration: none;
   color: var(--color-link);
   position: relative;
-  top: 0;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  // top: 0;
+  // -webkit-transition: all 0.2s ease-in-out;
+  @extend .transition-color;
+
+  
 }
 a:hover {
   color: var(--accent-hover);
@@ -46,7 +49,7 @@ a, a:hover, a:active, a:focus {
 }
 
 a:hover, a:active {
-  top: -$as-xxs;
+  // top: -$as-xxs;
 }
 
 #navbar a:hover,footer#site-footer a:hover {
@@ -251,7 +254,7 @@ main {
     z-index: 100;
     max-height: 50vh;
     width: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
     @media (min-width: $mobile-breakpoint){
       position: absolute;
       top: $navbar-item-height;
@@ -262,11 +265,13 @@ main {
   #navbar-search-results {
     @include ul-reset;
     position: relative;
+    // padding: $as-xs;
 
     li {
       padding: $as-xs;
       list-style: none;
       line-height: 1.5em;
+      @extend .rounded-xs;
       &:hover {
         background: #{$color-secondary};
       }
@@ -363,7 +368,7 @@ section.toc, section.git-info {
   nav {
     @media (min-width: $mobile-breakpoint) {
       max-height: 65vh ;
-      overflow: scroll;
+      overflow-y: scroll;
     }
   }
   background: var(--fbg-200);
